--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
 #btn-norte {
     position: absolute;
     top: 80px; /* Debajo del header */
-    left: 20px;
+    left: 10px;
     z-index: 1000;
     background: white;
     border: 2px solid var(--accent);
     border-radius: 50%;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -134,7 +134,7 @@
 }
 
 #icono-giro {
-    font-size: 30px;
+    font-size: 20px;
     color: #333;
     font-weight: bold;
     display: inline-block;
@@ -143,18 +143,18 @@
 .zoom-controls {
     position: absolute;
     top: 80px;
-    right: 20px;
+    right: 10px;
     z-index: 1000;
     display: flex;
     flex-direction: column;
     gap: 10px;        }
 .btn-zoom {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     background: white;
     border: 2px solid var(--accent);
     border-radius: 50%;
-    font-size: 24px;
+    font-size: 18px;
     font-weight: bold;
     color: #333;
     display: flex;
@@ -162,8 +162,9 @@
     justify-content: center;
     cursor: pointer;
     box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-    -webkit-tap-highlight-color: transparent;
-}
+    -webkit-tap-highlight-color: transparent;}
+.leaflet-compass { display: none !important; }
+
     </style>
 </head>
 <body ontouchstart="">
